--- a/CSS/portfolio.css
+++ b/CSS/portfolio.css
@@ -1,478 +1,1 @@
-:root {
-  --primary-text-color: #757575;
-  --title-text-color: #212121;
-  --accent-color: #2196f3;
-  --primery-background-color: #ffffff;
-  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-/* МОЯ ПАЛИТРА */
-/* Цвет лого #000000; #2196F3; */
-/* Цвет основного текста #212121; */
-/* Вторичный цвет текста  #757575; */
-/* Акцент #2196F3; */
-/* Фон страницы белый #FFFFFF; */
-/* Вторичный фон #F5F4FA; */
-/* вторичный фон 2 rgba(47, 48, 58, 0.8) */
-/* Фон футера #2F303A; */
-/* Цвет лого соцсетей #AFB1B8; */
-/* Цвет адреса и телефона в футере rgba(255, 255, 255, 0.6) */
-
-/* Утилиты */
-html {
-  box-sizing: border-box;
-}
-*,
-*::before,
-*::after {
-  box-sizing: inherit;
-}
-body {
-  font-family: Roboto, sans-serif;
-  letter-spacing: 0.03em;
-
-  background-color: var(--primery-background-color);
-  color: var(--primary-text-color);
-}
-h1,
-h2,
-p,
-ul {
-  margin-top: 0;
-  margin-bottom: 0;
-  margin-left: 0;
-  padding-left: 0;
-}
-ul {
-  list-style: none;
-}
-span {
-  color: var(--accent-color);
-}
-button {
-  font-family: inherit;
-}
-/* Шапка сайта */
-.container {
-  width: 1200px;
-
-  padding-left: 15px;
-  padding-right: 15px;
-
-  margin-left: auto;
-  margin-right: auto;
-}
-.page-header {
-  border: 1px solid #ececec;
-}
-.main-nav {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-/* Логотип */
-span {
-  color: var(--accent-color);
-}
-.logo {
-  display: block;
-
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  text-decoration: none;
-
-  color: #000000;
-
-  padding-top: 24px;
-  padding-bottom: 25px;
-  margin-right: 85px;
-
-  transition: color 250ms var(--timing-function);
-}
-.logo:hover,
-.logo:focus {
-  color: var(--accent-color);
-}
-/* Стилизация навигации сайта */
-.site-nav {
-  padding: 0;
-  display: flex;
-}
-.site-item {
-  padding: 0;
-}
-.site-nav .site-item:not(:last-child) {
-  margin-right: 50px;
-}
-.site-link {
-  display: block;
-  position: relative;
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-
-  color: var(--title-text-color);
-
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  transition: color 250ms var(--timing-function);
-}
-.site-link::after {
-  content: "";
-
-  position: absolute;
-  left: 0;
-  bottom: 0;
-
-  display: block;
-  width: 100%;
-  height: 2px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
-
-  transform: scaleX(0);
-  transition: transform 250ms var(--timing-function);
-}
-.site-link:hover::after {
-  transform: scaleX(1);
-}
-.site-item .site-link:hover,
-.site-item .site-link:focus,
-.site-item .site-link.current {
-  color: var(--accent-color);
-}
-.site-item .site-link.current::after {
-  transform: scaleX(1);
-}
-.contact-nav {
-  display: flex;
-}
-.contact-nav .item:not(:last-child) {
-  margin-right: 30px;
-}
-.contact-nav .item .link {
-  display: block;
-
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-
-  color: var(--primary-text-color);
-
-  padding-top: 32px;
-  padding-bottom: 32px;
-
-  transition: color 250ms var(--timing-function);
-}
-.contact-nav .link:hover,
-.contact-nav .link:focus {
-  color: var(--accent-color);
-  outline: none;
-}
-.icon {
-  vertical-align: middle;
-  margin-right: 10px;
-  fill: currentColor;
-}
-.contact-nav .icon {
-  margin-right: 10px;
-  fill: currentColor;
-}
-
-/* Оформление кнопок */
-.section {
-  padding-top: 94px;
-}
-.flex-button {
-  display: flex;
-  justify-content: center;
-}
-.button-nav {
-  display: inline-block;
-
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.62;
-  text-align: center;
-
-  color: var(--title-text-color);
-  background-color: #f5f4fa;
-
-  padding: 6px 22px;
-  border: 1px solid transparent;
-  border-radius: 4px;
-
-  min-width: 73px;
-
-  transition: color 250ms var(--timing-function),
-    background-color 250ms var(--timing-function);
-}
-.flex-button .item:not(:last-child) {
-  margin-right: 8px;
-}
-.button-nav:hover,
-.button-nav:focus {
-  color: var(--primery-background-color);
-  background-color: var(--accent-color);
-
-  border: 1px solid transparent;
-  border-radius: 4px;
-  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
-    0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-/* Галерея портфолио */
-.section-gallery {
-  padding-top: 94px;
-  padding-bottom: 94px;
-}
-.gallery {
-  display: flex;
-  flex-wrap: wrap;
-}
-.flex {
-  width: calc((100% - 60px) / 3);
-  margin-right: 30px;
-  margin-bottom: 30px;
-
-  border: 1px solid #eeeeee;
-}
-.flex:nth-child(3n) {
-  margin-right: 0;
-}
-.flex:nth-last-child(-n + 3) {
-  margin-bottom: 0;
-}
-.flex-box {
-  position: relative;
-  overflow: hidden;
-}
-.flex:hover,
-.flex:focus {
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.box-hover {
-  display: inline-block;
-  position: absolute;
-
-  background-color: var(--accent-color);
-
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-
-  padding: 63px 24px;
-
-  transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.flex-box:hover .box-hover {
-  opacity: 0.9;
-  transform: translateY(0);
-}
-.img {
-  display: block;
-  margin-left: 0;
-}
-.text {
-  font-size: 18px;
-  line-height: 1.56;
-
-  color: var(--primery-background-color);
-  background-color: var(--accent-color);
-}
-.title {
-  font-weight: 700;
-  font-size: 18px;
-  line-height: 2;
-  letter-spacing: 0.06em;
-
-  color: var(--title-text-color);
-
-  margin-top: 20px;
-  margin-bottom: 4px;
-}
-.list {
-  font-size: 16px;
-  line-height: 1.87;
-
-  color: var(--primary-text-color);
-
-  margin-bottom: 20px;
-}
-.title,
-.list {
-  margin-left: 24px;
-  margin-right: 24px;
-}
-/* Подвал сайта*/
-footer {
-  color: var(--primery-background-color);
-  background-color: #2f303a;
-}
-address {
-  color: var(--primery-background-color);
-  font-style: inherit;
-}
-.footer {
-  display: flex;
-  justify-content: center;
-
-  padding-top: 60px;
-  padding-bottom: 60px;
-}
-.footer-box {
-  width: 270px;
-  margin-right: 30px;
-}
-.footer-box-2 {
-  width: 570px;
-}
-.footer-logo {
-  font-family: Raleway, sans-serif;
-  font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
-  text-decoration: none;
-
-  color: var(--primery-background-color);
-
-  transition: color 250ms var(--timing-function);
-}
-.footer-logo:hover,
-.footer-logo:focus,
-.footer-contact-nav .link:hover,
-.footer-contact-nav .link:focus {
-  color: var(--accent-color);
-}
-.footer-contact {
-  font-size: 14px;
-  line-height: 1.71;
-
-  margin-top: 20px;
-  margin-bottom: 9px;
-}
-.footer-contact-nav .link {
-  font-weight: 500;
-  font-size: 14px;
-  line-height: 1.14;
-  letter-spacing: 0.02em;
-  text-decoration: none;
-
-  color: var(--primary-text-color);
-
-  transition: color 250ms var(--timing-function);
-}
-.footer-contact-list {
-  font-size: 14px;
-  line-height: 1.71;
-
-  color: rgba(255, 255, 255, 0.6);
-}
-.footer-contact-nav > li {
-  margin-bottom: 9px;
-}
-.footer-contact-nav > li:last-child {
-  margin-bottom: 0;
-}
-.footer-appeal {
-  display: block;
-
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.71;
-  text-transform: uppercase;
-
-  margin-bottom: 20px;
-}
-.input {
-  display: flex;
-}
-.net {
-  display: inline-block;
-
-  height: 50px;
-  width: 50px;
-
-  background-color: rgba(255, 255, 255, 0.1);
-  background-size: 20px;
-  background-repeat: no-repeat;
-  background-position: center;
-  border-radius: 50%;
-
-  margin-right: 10px;
-
-  transition: background-color 250ms var(--timing-function);
-}
-.net:last-child {
-  margin-right: 0;
-}
-.net:hover {
-  background-color: var(--accent-color);
-}
-.insta {
-  background-image: url(../images/social-footer/instagram-f.svg);
-}
-.twit {
-  background-image: url(../images/social-footer/twitter-f.svg);
-}
-.face {
-  background-image: url(../images/social-footer/facebook-f.svg);
-}
-.linkd {
-  background-image: url(../images/social-footer/linkedin-f.svg);
-}
-.footer-input {
-  width: 358px;
-  height: 50px;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-
-  color: var(--primery-background-color);
-  background-color: #2f303a;
-
-  margin-right: 12px;
-  padding: 15px 0 15px 16px;
-}
-.send {
-  width: 200px;
-  height: 50px;
-
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.87;
-
-  color: var(--primery-background-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  border-radius: 4px;
-
-  transition: color 250ms var(--timing-function),
-    background-color 250ms var(--timing-function),
-    box-shadow 250ms var(--timing-function);
-}
-.img-send {
-  fill: currentColor;
-  margin-left: 10px;
-}
-.send:hover,
-.send:focus {
-  color: var(--accent-color);
-  background-color: var(--accent-text-color);
-  box-shadow: 0px 4px 4px #2195f39c;
-}
-input::placeholder {
-  color: rgba(255, 255, 255, 0.6);
-  font-size: 16px;
-  line-height: 1.25;
-}
+/* No CSS *//*# sourceMappingURL=portfolio.css.map */
