--- a/sass/base/_common.scss
+++ b/sass/base/_common.scss
@@ -1,6 +1,12 @@
 .section {
   padding: 94px 0;
 }
+.btn {
+  padding-bottom: 50px;
+}
+.page-header {
+  border: 1px solid #ececec;
+}
 .container {
   width: 1200px;
 
