--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -35,6 +35,9 @@ h3 {
 span {
   color: $accent-color;
 }
+button {
+  font-family: inherit;
+}
 address {
   font-size: 14px;
   line-height: 1.71;
