--- a/CSS/main.css
+++ b/CSS/main.css
@@ -34,6 +34,10 @@ span {
   color: #2196f3;
 }
 
+button {
+  font-family: inherit;
+}
+
 address {
   font-size: 14px;
   line-height: 1.71;
@@ -397,6 +401,14 @@ template {
   padding: 94px 0;
 }
 
+.btn {
+  padding-bottom: 50px;
+}
+
+.page-header {
+  border: 1px solid #ececec;
+}
+
 .container {
   width: 1200px;
   padding-left: 15px;
@@ -619,6 +631,44 @@ template {
   position: absolute;
   fill: currentColor;
   margin-left: 10px;
+}
+
+.btn-portfolio {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.portfolio-nav {
+  display: inline-block;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+  color: #212121;
+  background-color: #f5f4fa;
+  padding: 6px 22px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  min-width: 73px;
+  -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-nav:hover, .portfolio-nav:focus {
+  color: #ffffff;
+  background-color: #2196f3;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  -webkit-box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.btn-portfolio .portfolio-item:not(:last-child) {
+  margin-right: 8px;
 }
 
 .footer-form {
@@ -994,6 +1044,37 @@ textarea::placeholder {
   background-image: url(../images/social-footer/linkedin-f.svg);
 }
 
+.us,
+.advantages,
+.team-work,
+.clients,
+.footer {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.advantages {
+  -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+}
+
+.footer {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.gallery {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
 .hero {
   max-width: 1600px;
   height: 600px;
@@ -1187,29 +1268,6 @@ textarea::placeholder {
 .clients-item .clients-link:hover,
 .clients-item .clients-link:focus {
   fill: #2196f3;
-}
-
-.us,
-.advantages,
-.team-work,
-.clients,
-.footer {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-}
-
-.advantages {
-  -ms-flex-wrap: nowrap;
-      flex-wrap: nowrap;
-}
-
-.footer {
-  padding-top: 60px;
-  padding-bottom: 60px;
 }
 
 footer {
