--- a/sass/companents/_button.scss
+++ b/sass/companents/_button.scss
@@ -54,3 +54,40 @@
   fill: currentColor;
   margin-left: 10px;
 }
+.btn-portfolio {
+  display: flex;
+  justify-content: center;
+}
+.portfolio-nav {
+  display: inline-block;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
+
+  color: $title-text-color;
+  background-color: #f5f4fa;
+
+  padding: 6px 22px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+
+  min-width: 73px;
+
+  transition: color 250ms $timing-function,
+    background-color 250ms $timing-function;
+  &:hover,
+  &:focus {
+    color: $primery-background-color;
+    background-color: $accent-color;
+
+    border: 1px solid transparent;
+    border-radius: 4px;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+.btn-portfolio .portfolio-item:not(:last-child) {
+  margin-right: 8px;
+}
